--- a/client/src/components/mostrarRestaurantes/ShowRestaurants.module.css
+++ b/client/src/components/mostrarRestaurantes/ShowRestaurants.module.css
@@ -3,32 +3,27 @@
     display: flex;
     align-items: center;
     justify-content:center;
+    width: 100%;
     /* overflow-y: hidden; */
 }
 
 .background{
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    width: 50vw;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    /* background: linear-gradient(to right, #00000000, #000000ce 80%, #000000ba 90%); */
+    padding: 3rem 3rem;
 }
 
 .cardGroup{
     display: flex;
-    height: 70%;
+    flex-wrap: wrap;
+    width: 50vw;
+    height: 100%;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    padding-top: 7rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    /* flex-direction: column; */
+    padding: 2rem 2rem;
     background-color: transparent;
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -42,6 +37,7 @@
     display: none;
 }
 
+
 .cardGroup ul li{
     margin-top: 1rem;
     display: block;
@@ -50,7 +46,7 @@
 .card{
     cursor: pointer;
     background-color: rgb(255, 255, 255);
-    width: 20em;
+    /* width: 20em; */
     padding: .5rem;
     font-family: Alegreya;
     font-size: 1.5rem;
