--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -1,39 +1,61 @@
 .containerNavbar{
     width: 100%;
-    position: absolute;
-    z-index: 100;
-    top: 0;
-    left: 0;
     display: flex;
     align-items: center; 
     justify-content:space-between;
-    padding: .7rem 5rem;
-    /* border-bottom: 1px solid var(--purple); */
-    background: linear-gradient(to left, rgba(0, 0, 0, 0), #b3b6157b 30%,var(--purple),  #00000000) 50%;
+    padding: 1.5rem 4rem;
+    background: linear-gradient(to bottom, rgb(0, 0, 0),#0000002f);
     transition: all 200ms ease;
 }
 
-.containerTypewriter{
+.containerTitle{
     border-radius: 5px;
-    font-size: 5rem;
-    font-weight: 700;
-    text-shadow: 3px 3px var(--purple);
+    font-size: 3rem;
+    font-weight: 800;
+    letter-spacing: .1rem;
+    /* text-shadow: 1px 1px white; */
     color: white;
     font-family: Alegreya;
 }
 
-.activeLabel{
-    color: red;
+.and{
+    color: var(--green);
 }
 
-.inactiveLabel{
-    color: gray;
-}
 
-.activeSelector{
+.btnContainer{
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    padding-top: 1.5rem;
 }
 
-.inactiveSelector{
-    display: none;
+.btn{
+    font-family: Roboto Condensed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0px solid transparent;
+    outline: none;
+    cursor: pointer;
+    margin-left: 2rem;
+    padding: .5rem .7rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: .05rem;
+    color: white;
+    text-shadow: 1px 1px black;
+    background-color: var(--green);
+    border-radius: 22px;
+    transition: all 200ms ease;
 }
+
+.btn:hover{
+    outline: 2px solid var(--purple);
+    color: white;
+    background-color: black;
+    border-radius: 8px;
+}
+
