--- a/client/src/navbar/RestaurantSearchBar.module.css
+++ b/client/src/navbar/RestaurantSearchBar.module.css
@@ -1,5 +1,4 @@
-.container {
-    position: relative;  
+.containerSearchBar{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -7,19 +6,19 @@
   }
   
   .form {
-    width: 100%;
-    max-width: 500px;
-  }
-  
-  .inputContainer {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    /* min-width: 100%; */
+  }
+  
+  .inputContainer {
+ display: flex;
+ align-items: center;
+ justify-content: center;
   }
   
   .inputSearch {
+    width: 30rem;
     appearance: none;
     outline: none;
     border: none;
@@ -27,13 +26,13 @@
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 8px;
     background-color: white;border-top-left-radius: 8px;
-    padding: 0.5rem 1rem;
-    font-size: 1.1rem;
+    padding: 0.5rem .5rem;
+    font-size: 25rem;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     letter-spacing: 0.05rem;
     box-shadow: 0 4px 6px rgba(240, 77, 77, 0.1);
-    transition: all 200ms ease;
+    transition: all 150ms ease;
  
   }
   
@@ -41,22 +40,9 @@
     outline: none;
     border: none;
     background-color: white;
+    outline: 2px solid var(--purple);
   }
-  
-  /* .dropdown {
-    width: 100%;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 0 0 8px 8px;
-    overflow-y: auto;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-  } */
-  
+/*   
   .searchResultItem {
     padding: 0.5rem 1rem;
     cursor: pointer;
@@ -64,9 +50,9 @@
   
   .searchResultItem:hover {
     background-color: #f0f0f0;
-  }
+  } */
   
-  .btnSearch {
+  .btnTrash{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,13 +63,14 @@
     font-size: 1.3rem;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    color: white;
-    background-color: var(--purple);
-    transition: all 200ms ease;
+    color: black;
+    background-color: var(--green);
+    transition: all 150ms ease;
   }
   
-  .btnSearch:hover {
-    color: var(--green);
+  .btnTrash:hover {
+    color: white;
     background-color: black;
+    outline: 2px solid var(--purple);
   }
   
