--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,11 +1,11 @@
 :root{
     --purple: #8234CF;
-    --green: #b7ba1f;
+    --green: #c4c713;
 }
 .container{
     width: 100%;
     height: 100%;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
