--- a/client/src/home/Hero.module.css
+++ b/client/src/home/Hero.module.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content:center;
+    gap: 25rem;
 }
 
 .hero1{
@@ -10,7 +11,7 @@
     align-items: center;    
     justify-content:center; 
     flex-direction: column;
-    gap: 1rem;
+    gap: 3rem;
 }
 
 .hero2{
@@ -45,7 +46,7 @@
     font-family: Alegreya;
     font-size: 4.5rem;
     font-weight: 600;
-    color: var(--green);   
+    color: white;   
     line-height: 4.8rem;
 }
 
@@ -59,4 +60,3 @@
     color: white;   
     line-height: 4.8rem;
 }
-    
