--- a/client/src/home/Landing.module.css
+++ b/client/src/home/Landing.module.css
@@ -1,6 +1,6 @@
 .containerLanding{
-    width: 100%;
-    height: 100%;
+    /* width: 100vw;
+    height: 100vh; */
     position: relative;
     flex-direction: column;
     display: flex;
@@ -12,7 +12,7 @@
 h1{
     font-family: Alegreya;
     color: white;   
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 .background{
@@ -27,11 +27,4 @@ h1{
     left: 0;
     background-image: url('../images/bgHome.jpg');
     background-size:cover;
-}
-
-.containerMiddleSection{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem
 }
