--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -3,23 +3,27 @@
     display: flex;
     align-items: center; 
     justify-content:space-between;
-    padding: 1.5rem 4rem;
+    padding: 1.5rem 5rem;
     background: linear-gradient(to bottom, rgb(0, 0, 0),#0000002f);
     transition: all 200ms ease;
 }
 
 .containerTitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
     border-radius: 5px;
-    font-size: 3rem;
-    font-weight: 800;
+    font-size: 2.7rem;
+    font-weight: 700;
     letter-spacing: .1rem;
-    /* text-shadow: 1px 1px white; */
-    color: white;
+    /* text-shadow: 1px 0px white; */
+    color: var(--green);
     font-family: Alegreya;
 }
 
 .and{
-    color: var(--green);
+    color: white;
 }
 
 
@@ -42,20 +46,41 @@
     cursor: pointer;
     margin-left: 2rem;
     padding: .5rem .7rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 700;
     letter-spacing: .05rem;
-    color: white;
-    text-shadow: 1px 1px black;
+    color: black;
+    /* text-shadow: 1px 1px black; */
     background-color: var(--green);
     border-radius: 22px;
     transition: all 200ms ease;
 }
 
 .btn:hover{
-    outline: 2px solid var(--purple);
     color: white;
+    outline: 2px solid var(--purple);
     background-color: black;
     border-radius: 8px;
 }
+
+.logoContainer{  
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    border-radius: 50%;
+    /* padding: 1.5rem 1.5rem; */
+    padding: .2rem;
+    width: 4rem;
+    height: 4rem;
+    overflow: hidden;
+    background-color: white;
+}
+
+.logoContainer img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding: .3rem;
+}
+
 
