--- a/client/src/navbar/RestaurantSearchBar.module.css
+++ b/client/src/navbar/RestaurantSearchBar.module.css
@@ -27,7 +27,6 @@
     border-bottom-left-radius: 8px;
     background-color: white;border-top-left-radius: 8px;
     padding: 0.5rem .5rem;
-    font-size: 25rem;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     letter-spacing: 0.05rem;
@@ -40,7 +39,7 @@
     outline: none;
     border: none;
     background-color: white;
-    outline: 2px solid var(--purple);
+    outline: 1px solid var(--purple);
   }
 /*   
   .searchResultItem {
@@ -63,8 +62,8 @@
     font-size: 1.3rem;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    color: black;
-    background-color: var(--green);
+    color: white;
+    background-color: var(--purple);
     transition: all 150ms ease;
   }
   
