--- a/client/src/home/Hero.css
+++ b/client/src/home/Hero.css
@@ -1,8 +1,8 @@
 .containerHero{
-    /* border: 2px solid pink; */
+    border: 2px solid pink;
     width: 100%;
     height: 100%;
-    margin-top: 7rem;
+    padding-top: 3rem;
     display: flex;
     align-items: center;
     justify-content:center;
@@ -10,6 +10,7 @@
 }
 
 .hero{
+    border: 2px solid white;
     width: 50%;
     height: 100%;
     display: flex;
@@ -21,11 +22,14 @@
 }
 
 .heroLoadedComponents{
+    border: 2px solid rgb(122, 122, 122);
+    padding-left: 5rem;
+    padding-right: 5rem;
     width: 50%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content:center; 
+    /* overflow-x: hidden  ; */
 }
 
 
