--- a/client/src/components/mostrarRestaurantes/ShowRestaurants.css
+++ b/client/src/components/mostrarRestaurantes/ShowRestaurants.css
@@ -21,13 +21,46 @@
   }
   
   .card {
-    flex: 0 0 auto;
+    font-family: Alegreya;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
     width: 15rem; /* Ajusta el tamaño según tus necesidades */
-    margin: 0 1rem;
+    margin: 0 .5rem;
     background-color: white;
     border-radius: 8px;
   }
-  
+
+  .cardName{
+    font-family: Alegreya;
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    padding-left: .5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    background-color: var(--green);
+    width: 100%;
+    margin-bottom: .5rem;
+  }
+
+  .cardSchedule {
+    padding-bottom: .5rem;
+  }
+
+  .cardSchedule p{
+    font-family: Roboto;
+    font-size: 1rem;
+    font-weight: 400;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
   .scrollButton {
     appearance: none;
     display: flex;
@@ -41,12 +74,19 @@
     color: white;
     border: none;
     cursor: pointer;
+    transition: all 250ms ease;
+  }
+
+.scrollButton:hover {
+    background-color: black;
+    border-radius: 8px;
+    outline: 1px solid var(--green);
   }
   
   .scrollButton.left {
-    margin-right: 10px;
+    margin-right: 2rem;
   }
   
   .scrollButton.right {
-    margin-left: 10px;
+    margin-left: 2rem;
   }
