--- a/client/src/components/infoModal/InfoModal.css
+++ b/client/src/components/infoModal/InfoModal.css
@@ -1,13 +1,12 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    /* position: fixed; */
+    /* top: 0;
+    left: 0; */
+    /* width: 100%;
+    height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
   }
   
   .modal-content {
@@ -69,17 +68,18 @@
   }
   
   .modal-button {
-    background-color: #4285f4;
+    background-color: var(--green);
     color: white;
     border: none;
     border-radius: 5px;
     padding: 0.5rem 1rem;
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 200ms ease;
+    transition: all 250ms ease;
   }
   
   .modal-button:hover {
-    background-color: #357ae8;
+    outline: 1px solid var(--purple);
+    background-color: black;
   }
   
