--- a/client/src/components/infoModal/InfoModal.css
+++ b/client/src/components/infoModal/InfoModal.css
@@ -1,26 +1,46 @@
 .modal {
-    /* position: fixed; */
-    /* top: 0;
-    left: 0; */
-    /* width: 100%;
-    height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
   }
   
   .modal-content {
+    color: var(--purple);
+    font-family: Roboto Condensed;
+    font-size: 1rem;
+    letter-spacing: .1rem ;
+    font-weight: 400;
     background: white;
     border-radius: 8px;
-    padding: 1.5rem;
+    padding: .7rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     animation: slideUp 300ms ease-out forwards;
   }
   
+  .logoContainerInfoModal{  
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    border-radius: 50%;
+    padding: .2rem;
+    width: 3.5rem;
+    height: 3.5rem;
+    overflow: hidden;
+    outline: 3px solid var(--purple);
+    background-color: white;
+    margin-left: .5rem;
+}
+
+.logoContainerInfoModal img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding: .3rem;
+}
+
   @keyframes slideUp {
     from {
       transform: translateY(50px);
@@ -33,11 +53,11 @@
   }
   
   .success {
-    border: 2px solid #b7e4c7;
+    border: 2px solid var(--green);
   }
   
   .error {
-    border: 2px solid #f4c2c2;
+    border: 2px solid red;
   }
   
   .modal-icon {
