--- a/client/src/components/mostrarRestaurantes/ShowRestaurants.css
+++ b/client/src/components/mostrarRestaurantes/ShowRestaurants.css
@@ -1,10 +1,18 @@
-/* .containerShowRestaurants {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
-  
-  .showRestaurants {
+.titleShowRestaurants{
+  font-family: Alegreya;
+  font-size: 3rem;
+  padding-bottom: 2rem;
+  font-weight: 700;
+  color: white;
+  position: absolute;
+  z-index: 9999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-7rem);
+}
+
+.showRestaurants {
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
@@ -17,8 +25,6 @@
     display: flex;
     padding: 0;
     margin: 0;
-    list-style: none;
-    /* overflow: auto; */
   }
   
   .card {
@@ -26,9 +32,8 @@
     font-family: Alegreya;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     flex-direction: column;
-    width: 15rem; /* Ajusta el tamaño según tus necesidades */
+    width: 15rem; 
     margin: 0 .7rem;
     background-color: white;
     border-radius: 8px;
@@ -82,18 +87,21 @@
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
+    outline: 2px solid var(--green);
     font-size: 3rem;
-    background-color: var(--purple);
-    color: white;
-    border: none;
+    background-color: rgba(0, 0, 0, 0.171);
+    text-shadow: 2px 2px black;
+    color: var(--green);
+    border: none; 
     cursor: pointer;
-    transition: all 250ms ease;
+    transition: all 200ms ease;
   }
 
 .scrollButton:hover {
+    color: white;
     background-color: black;
     border-radius: 8px;
-    outline: 1px solid var(--green);
+    outline: 2px solid var(--purple);
   }
   
   .scrollButton.left {
