--- a/client/src/components/mostrarRestaurantes/ShowRestaurants.css
+++ b/client/src/components/mostrarRestaurantes/ShowRestaurants.css
@@ -1,4 +1,5 @@
 .titleShowRestaurants{
+  user-select: none;
   font-family: Alegreya;
   font-size: 3rem;
   padding-bottom: 2rem;
@@ -80,6 +81,7 @@
     padding-bottom: .5rem;
   }
   .scrollButton {
+    user-select: none;
     appearance: none;
     display: flex;
     align-items: center;
