--- a/client/src/navbar/UserCard.module.css
+++ b/client/src/navbar/UserCard.module.css
@@ -34,3 +34,20 @@
     height: 100%;
     object-fit: cover;
 }
+
+.reservasContainer {
+    margin-top: 20px;
+    padding: 0 15px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out, padding 0.5s ease-out;
+  }
+  
+  .reservasContainer.show {
+    max-height: 500px; /* Adjust this value based on the content height */
+    padding: 15px;
+  }
+  
